# AI-Partner

./: .gitignore  README.md  requirements.txt
backend/: .env.example  README.md  agents.md  pyproject.toml  requirements.txt
backend/backend/: settings.py
backend/web/migrations/: 0002_character.py  0003_rename_photo_character_photo2.py  0004_rename_photo2_character_photo.py  0005_friend.py  0006_message.py  0007_alter_message_input.py  0008_systemprompt.py  0009_voice_character_voice.py
backend/web/templates/: index.html
backend/web/views/friend/message/chat/: chat.py
backend/web/views/homepage/: index.py
backend/web/views/user/account/: get_user_info.py  register.py
frontend/: package-lock.json  package.json
frontend/src/components/character/: Character.vue
frontend/src/components/character/chat_field/chat_history/: ChatHistory.vue
frontend/src/components/character/chat_field/chat_history/message/: Message.vue
frontend/src/components/character/chat_field/input_field/: InputField.vue
frontend/src/components/navbar/: NavBar.vue  UserMenu.vue
frontend/src/js/config/: config.js
frontend/src/views/friend/: FriendIndex.vue
frontend/src/views/user/profile/: ProfileIndex.vue
frontend/src/views/user/space/: SpaceIndex.vue
